<resources>
    <string name="app_name">HelioFlow</string>
    <string name="rule_page">Programmation des volets</string>
    <string name="plus_button">Ajoutez une règle</string>
    <string name="new_rule_title">Nouvelle programmation</string>
    <string name="action_label">Action</string>
    <string name="opening">Ouverture</string>
    <string name="closing">Fermeture</string>
    <string name="time_label">Heure</string>
    <string name="default_time">08:00</string>
    <string name="days_label">Jours</string>
    <string name="monday_short">Lun</string>
    <string name="tuesday_short">Mar</string>
    <string name="wednesday_short">Mer</string>
    <string name="thursday_short">Jeu</string>
    <string name="friday_short">Ven</string>
    <string name="saturday_short">Sam</string>
    <string name="sunday_short">Dim</string>
    <string name="monday_initial">L</string>
    <string name="tuesday_initial">Ma</string>
    <string name="wednesday_initial">Me</string>
    <string name="thursday_initial">J</string>
    <string name="friday_initial">V</string>
    <string name="saturday_initial">S</string>
    <string name="sunday_initial">D</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
    <string name="no_day_selected">Veuillez sélectionner au moins un jour</string>
    <string name="token_dialog_title">Token API</string>
    <string name="token_hint">Entrez votre token</string>
    <string name="token_saved">Token enregistré</string>
    <string name="settings">Paramètres</string>
    <string name="token_required">Le token est requis</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="confirm_delete_title">Confirmer la suppression</string>
    <string name="confirm_delete_message">Voulez-vous vraiment supprimer cette programmation ?</string>
    <string name="edit_rule_title">Modifier la programmation</string>
    <string name="rule_deleted">Programmation supprimée</string>
    <string name="rule_updated">Programmation mise à jour</string>
    <string name="remote_button">Télécommande</string>
    <string name="remote_title">Télécommande</string>
    <string name="salon">Salon</string>
    <string name="chambre">Chambre</string>
    <string name="arrow_up">▲</string>
    <string name="arrow_down">▼</string>
    <string name="pause">⏸</string>
</resources>